[package]
name = "legion_determinism_check"
version = "0.1.0"
authors = ["derivator <derivator@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    legion = "0.4.0"
    serde = {version = "1.0.124", features = ["derive"]}
    serde_json = "1.0.64"
